// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile Preview Chart With Calendar should not show chart without model.component data 1`] = `
<pf-tile-preview-calendar-with-chart
  actionsSubject={[Function ActionsSubject]}
  chartData={[Function Array]}
  clientSettingsStore={[Function Store]}
  model={[Function Object]}
  seriesItemHighlightStyle={[Function Object]}
  showChartDetail="false"
  tileGridStore={[Function Store]}
>
  
  <span
    class="tile-background-overlay"
  />
  <div
    class="flex-container"
  >
    
  
  
  
    
    
  
  
    
    
  
    
    
  
  
  </div>
  
  
</pf-tile-preview-calendar-with-chart>
`;

exports[`Tile Preview Chart With Calendar should show kendo chart when model.ChartComponentData.length > 0 1`] = `
<pf-tile-preview-calendar-with-chart
  actionsSubject={[Function ActionsSubject]}
  chartData={[Function Array]}
  clientSettingsStore={[Function Store]}
  model={[Function Object]}
  selectedDate={[Function Date]}
  seriesItemHighlightStyle={[Function Object]}
  showChartDetail="false"
  tileGridStore={[Function Store]}
>
  
  <span
    class="tile-background-overlay"
  />
  <div
    class="flex-container"
  >
    
  
  
  
    
    <div
      class="left-tile-area pt-5"
    >
      
      
      <span
        class="tile-text"
      >
        
        test category
      
      </span>
      
    
      <span
        class="tile-text-large"
      >
        
        0
      
      </span>
      
  
    </div>
    
  
  
    
    <div
      class="middle-tile-area"
    >
      
     
      <span
        class="tile-text-large"
      >
        
        0
      
      </span>
      
    
      <span
        class="tile-text mb-2"
      >
        
       test category
      
      </span>
      
    
      <kendo-datepicker
        onkeydown="return false;"
      >
        
    
      </kendo-datepicker>
      
    
      <div
        class="hidden-tile-area"
      >
        
       
        <span
          class="tile-text"
        >
          
        test category
      
        </span>
        
      
        <span
          class="tile-text-large"
        >
          
        0
      
        </span>
        
    
      </div>
      
  
    </div>
    
  
    
    <div
      class="right-tile-area"
    >
      
    
      <kendo-chart>
        
      
        <kendo-chart-area
          background="none"
        />
        
      
        <kendo-chart-series>
          
        
          <kendo-chart-series-item
            categoryfield="Key"
            field="Value"
          >
            
          
            <kendo-chart-series-item-tooltip>
              
            
              
              
          
            </kendo-chart-series-item-tooltip>
            
        
          </kendo-chart-series-item>
          
        
          
          
      
        </kendo-chart-series>
        
      
        <kendo-chart-legend>
          
      
        </kendo-chart-legend>
        
    
      </kendo-chart>
      
  
    </div>
    
  
  
  </div>
  
  
</pf-tile-preview-calendar-with-chart>
`;
